# automated-greenhouse

./: First Draft PCB(Official).kicad_sch  README.md
Circuits/: RP2040_minimal.kicad_pro  RP2040_minimal.kicad_sch
Circuits/FirstDraftOfficial/: 2023-03-20_20-55-31.lib  MIKROE1425.kicad_mod  New_Library.kicad_sym
Coding/: greencontrol.h  greenhouse.cpp
Coding/GUIslice_port/GUIslice/configs/: rpi-pico-default-vga.h  stm32-adagfx-mcufriend-notouch.h
Coding/GUIslice_port/GUIslice/examples/pico/ex01_pico_basic/: CMakeLists.txt  ex01_pico_basic.c
Coding/GUIslice_port/GUIslice/examples/pico/ex02_pico_btn_txt/: CMakeLists.txt  ex02_pico_btn_txt.c
Coding/GUIslice_port/GUIslice/src/: GUIslice_config.h  GUIslice_drv.h  GUIslice_drv_pico_vga.c  GUIslice_drv_pico_vga.h  rgb.pio  timing.pio
Coding/GUIslice_stuff/: GUIslice_Build.ino  GUIslice_Build.prj  GUIslice_Build_GSLC.h
FirstDraftOfficial/: FirstDraftOfficial.kicad_pcb  FirstDraftOfficial.kicad_prl  FirstDraftOfficial.kicad_pro  FirstDraftOfficial.kicad_sch  FirstDraftOfficial.kicad_sch-bak  MIKROE-1425.lib  MIKROE-1425.mod  New_Library.bak  PPTC151LFBN-RC.lib  STUSB4761QTR.lib  fp-info-cache  fp-lib-table  sym-lib-table
FirstDraftOfficial/Library.pretty/: Moisture Sensor.kicad_mod
